Fix overflow of undo button

--- a/app/styles/ui/changes/_changes-list.scss
+++ b/app/styles/ui/changes/_changes-list.scss
@@ -9,6 +9,7 @@
   flex-grow: 1;
   display: flex;
   flex-direction: column;
+  min-height: 0;
 
   .stashed-changes-button {
     @include ellipsis;
